# model-speed-test

./: .gitignore  .gitmodules  README.md
GDPval/: .gitignore  README.md  config.example.yaml  config.gdp-10-request-active-xhigh-20260715.yaml  config.gdp-10-task1-3x.yaml  config.gdp-10-task2-3x.yaml  config.gdp-10-tasks3-5-3x.yaml  config.gdp-10-tasks6-10-3x.yaml  config.gdp-10.yaml  config.hard-three-xhigh.yaml  config.hard-three.yaml  config.rerun-spec-v1-2.yaml  config.smoke.yaml  config.yaml  pyproject.toml
GDPval/docker/: Dockerfile  build-native.sh  image-healthcheck.py  requirements-gdpval.txt
GDPval/minisets/: gdp-10.yaml
GDPval/src/gdpval_timing/: __init__.py  cli.py  dataset.py  models.py  runner.py  sandbox.py  summary.py  tools.py
GDPval/src/gdpval_timing/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py
GDPval/tests/: test_economy.py  test_sandbox.py  test_timing.py
HLE/: .gitignore  .run_opus_gold100.py  README.md  bench.py  hle-100-questions.csv  hle-verified-gold-100-questions.csv  judgments.csv  requirements.txt  responses.jsonl  results.csv  run_summaries.jsonl  test_bench.py
live-code-bench/: .gitignore  BENCHMARKING.md  NATIVE_CODEX_BENCHMARKING.md  README.md  api_gpt55_high_q1-5_2026-07-13.csv  api_gpt55_high_q1-5_2026-07-13.summary.json  bench_results.csv  bench_results_v2_full80_xhigh_2026-07-03.csv  bench_results_v3_full80_xhigh_2026-07-03.csv  bench_runner.py  build_instrumented_codex  cerebras_glm47_hard1_2026-07-06.csv  cerebras_glm47_hard1_40k_2026-07-06.csv  check_current_codex_native.py  codex_native_runner.py  (+40 more)
(+265 files in other folders)
