[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gdpval-timing"
version = "0.1.0"
description = "Provider-native GDPval agent timing harness"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "huggingface-hub>=0.24",
  "pyarrow>=15.0",
  "Pillow>=10.0",
  "tiktoken==0.13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
gdpval-time = "gdpval_timing.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
